<resources>
    <string name="app_name" translatable="false">KnowledgeQuiz</string>
    <string name="txt_play">New Game</string>
    <string name="txt_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="txt_how_to">How to</string>
    <string name="txt_high_scores">Highscores</string>
    <string name="name_description">This name will appear next to your highscores.</string>

    <string name="general_header">General</string>

    <string name="name_title">Your name</string>
    <string name="are_you_sure_want_to_exit">Are you sure? Leaving mid-game causes losing your score.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>

    <!--Categories-->
    <string name="pick_category">Pick category</string>
    <string name="category_any">Any category</string>
    <string name="category_general">General knowledge</string>
    <string name="category_math">Mathematics</string>
    <string name="category_computers">Computers</string>
    <string name="category_sports">Sports</string>
    <string name="category_history">History</string>
    <string name="category_animals">Animals</string>
    <string name="category_politics">Politics</string>

    <string name="answer_a" translatable="false">A</string>
    <string name="answer_b" translatable="false">B</string>
    <string name="answer_c" translatable="false">C</string>
    <string name="answer_d" translatable="false">D</string>
    <string name="out_of_10" translatable="false">%1$d/10</string>
    <string name="your_score_out_of_10">Your score: %1$d/10</string>
    <string name="language_alert_title">Language</string>
    <string name="language_alert_message">Please note that the questions and answers will still be displayed in English</string>
    <string name="loading_questions">Loading questions...</string>
    <string name="answer_choices_multiple" translatable="false">a, %1$s &lt;br /&gt; b, %2$s &lt;br /&gt; c, %3$s &lt;br /&gt; d, %4$s</string>
    <string name="answer_choices_true_false" translatable="false">a, %1$s &lt;br /&gt; b, %2$s</string>
    <string name="your_answers">Your answers</string>
    <!-- Strings used for fragments for navigation -->
    <string name="txt_clear">Clear all</string>
    <string name="are_you_sure">Are you sure to delete all scores?</string>
    <string name="answer_false">False</string>
    <string name="answer_true">True</string>
    <string name="search">Filter category</string>
    <string name="see_best_only">View best only</string>
    <string name="see_all">See all</string>

</resources>